include $(top_srcdir)/build-aux/init.mk

# --- Distribute and install headers.
nobase_include_HEADERS =				\
	roboptim/core.hh

nobase_include_HEADERS +=				\
	roboptim/core/constant-function.hh		\
	roboptim/core/debug.hh				\
	roboptim/core/derivable-function.hh		\
	roboptim/core/derivable-parametrized-function.hh\
	roboptim/core/derivative-size.hh		\
	roboptim/core/finite-difference-gradient.hh	\
	roboptim/core/finite-difference-gradient.hxx	\
	roboptim/core/function.hh			\
	roboptim/core/fwd.hh				\
	roboptim/core/generic-solver.hh			\
	roboptim/core/identity-function.hh		\
	roboptim/core/indent.hh				\
	roboptim/core/io.hh				\
	roboptim/core/linear-function.hh		\
	roboptim/core/n-times-derivable-function.hh	\
	roboptim/core/n-times-derivable-function.hxx	\
	roboptim/core/numeric-linear-function.hh	\
	roboptim/core/numeric-quadratic-function.hh	\
	roboptim/core/parametrized-function.hh		\
	roboptim/core/parametrized-function.hxx		\
	roboptim/core/portability.hh			\
	roboptim/core/problem.hh			\
	roboptim/core/problem.hxx			\
	roboptim/core/quadratic-function.hh		\
	roboptim/core/result-with-warnings.hh		\
	roboptim/core/result.hh				\
	roboptim/core/solver-error.hh			\
	roboptim/core/solver-factory.hh			\
	roboptim/core/solver-factory.hxx		\
	roboptim/core/solver-warning.hh			\
	roboptim/core/solver.hh				\
	roboptim/core/solver.hxx			\
	roboptim/core/sys.hh				\
	roboptim/core/twice-derivable-function.hh	\
	roboptim/core/util.hh				\
	roboptim/core/util.hxx

# Function filters.
nobase_include_HEADERS +=				\
	roboptim/core/filter/cached-function.hh		\
	roboptim/core/filter/cached-function.hxx	\
	roboptim/core/filter/split.hh			\
	roboptim/core/filter/split.hxx


# Built-in plug-in.
nobase_include_HEADERS +=				\
	roboptim/core/plugin/dummy.hh

# Visualization
nobase_include_HEADERS +=				\
	roboptim/core/visualization/fwd.hh		\
	roboptim/core/visualization/gnuplot.hh		\
	roboptim/core/visualization/gnuplot-commands.hh	\
	roboptim/core/visualization/gnuplot-function.hh
